--- a/package.json
+++ b/package.json
@@ -5,17 +5,25 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "css": "node-sass src/scss/theme.scss src/assets/theme.css",
+    "watch:css": "yarn css -watch"
   },
   "dependencies": {
     "vue": "^2.5.17",
-    "vue-router": "^3.0.1"
+    "vue-progressive-image": "^3.1.0",
+    "vue-router": "^3.0.1",
+    "vue-scroll-reveal": "^1.0.8",
+    "yarn": "^1.9.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-eslint": "^3.0.1",
     "@vue/cli-service": "^3.0.1",
-    "node-sass": "^4.9.0",
-    "sass-loader": "^7.0.1",
+    "css-loader": "1.0.0",
+    "less-loader": "4.1.0",
+    "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0",
+    "style-loader": "0.22.1",
     "vue-template-compiler": "^2.5.17"
   }
 }
