--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue": "^2.5.17",
     "vue-progressive-image": "^3.1.0",
     "vue-router": "^3.0.1",
+    "vue-router-nav": "^0.1.8",
     "vue-scroll-reveal": "^1.0.8",
     "yarn": "^1.9.4"
   },
