--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "watch:css": "yarn css -watch"
   },
   "dependencies": {
+    "hooper": "^0.3.4",
     "vue": "^2.5.17",
     "vue-progressive-image": "^3.1.0",
     "vue-router": "^3.0.1",
@@ -22,7 +23,7 @@
     "@vue/cli-service": "^3.0.1",
     "css-loader": "1.0.0",
     "less-loader": "4.1.0",
-    "node-sass": "^4.9.3",
+    "node-sass": "^4.13.1",
     "sass-loader": "^7.1.0",
     "style-loader": "0.22.1",
     "vue-template-compiler": "^2.5.17"
